syntax = "proto3";
package culqi;

import "google/protobuf/timestamp.proto";

option go_package = "mculqi";

service MCulqi {
    rpc Charge(ChargeParams) returns (ChargeResponse) {}
}

message ChargeResponse {
    string id = 1;  
    google.protobuf.Timestamp at = 2;
    float how = 3;
    string userMessageFromCulqi = 4;
}

message ChargeParams {
    UserInformation userInfo = 1;
    float amount = 2;
    Currency currency = 3;
}

message UserInformation {
    string token = 1;
	string email = 2;
	string firstName = 3;
	string lastName = 4;
	string countryCode = 5;
}

enum Currency {
    PEN = 0;
    USD = 1;
}